# glogger

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  dev-panel.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.experimental.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/examples/: moon_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cdn.rs  cdn_commands.rs  cdn_diff.rs  chat_combat_parser.rs  chat_commands.rs  chat_parser.rs  chat_resuscitate_parser.rs  chat_status_parser.rs  commands.rs  coordinator.rs  debug_capture.rs  external_fetch.rs  game_state.rs  gst_manager.rs  lib.rs  log_watchers.rs  main.rs  parsers.rs  player_event_parser.rs  replay.rs  report_stats.rs  settings.rs  setup_commands.rs  shop_log_parser.rs  stall_aggregations.rs  stall_year_resolver.rs  survey_parser.rs  survey_persistence.rs  trip_router.rs  unified_search.rs  update_check.rs  watch_rules.rs  zone_graph.rs
src-tauri/src/db/: admin_commands.rs  aggregate_commands.rs  brewing_commands.rs  build_planner_commands.rs  cdn_persistence.rs  character_commands.rs  chat_commands.rs  crafting_commands.rs  death_commands.rs  farming_commands.rs  game_state_commands.rs  gourmand_commands.rs  hoplology_commands.rs  inventory_commands.rs  kill_tracking_commands.rs  market_commands.rs  message_commands.rs  migrations.rs  mod.rs  player_commands.rs  player_commands_survey_events.rs  price_helper_commands.rs  queries.rs  resuscitate_commands.rs  (+4 more)
(+750 files in other folders)
