[package]
name = "glogger"
version = "0.4.5"
description = "Project: Gorgon Log Watcher and Data Tracker"
authors = ["Daniel"]
edition = "2021"

[lib]
name = "glogger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
